concord_macros/tests/trybuild/fail/codegen_contract/reserved_sse_arity_three.rs
use concord_macros::api;

api! {
    client ReservedSseArityThreeApi {
        base "https://example.com"
    }

    GET Events
        path ["events"]
        -> Sse<A, B, C>
}

fn main() {}
